--- a/touhouReverse.toml
+++ b/touhouReverse.toml
@@ -1,3 +1,3 @@
 [general]
 bndb-dir = "E:/Downloaded Software/Touhou Project"
-mapfile-dir = 'F:/asd/clone/ecl-parse/map'
+mapfile-dir = 'F:/asd/clone/truth/map'
